# cafe-panel

./: .build.yml  .travis.yml  AUTHORS  HACKING  Makefile.am  NEWS  README  autogen.sh  cafe-clock.pot  cafe-fish.pot  cafe-panel.pot  configure.ac  index.html  makepot  mate-clock.pot  mate-fish.pot  mate-panel.pot  output_7f9cd0c9da72687bd9acf43c9fcf4d2e807e61e5  output_8ac25c044a8648088e9a0a2d60dda0407344768a  output_a286fb32761b38d9753ca511cd510bba565ab958  output_b37178cb4a3cb80992ca4a81eb40e0111688c1dc
.tx/: config
2022-11-06-102638-51939-1@50028400eb50_master/: commitmsg  index.html  report-1ab148.html  report-1eba91.html  report-24d5ad.html  report-2eb93f.html  report-3546fc.html  report-35b499.html  report-3f6fe5.html  report-43e08d.html  report-45c58b.html  report-4ce9de.html  report-713bcf.html  report-736df5.html  report-78e988.html  report-8156ae.html  report-83a9aa.html  report-890f6c.html  report-9d1d93.html  report-a35bd4.html  report-a4b61c.html  report-a8e2a7.html  report-c0f9f2.html  report-cad275.html  report-dcd45f.html  report-e04d58.html  report-e48dad.html  report-e75242.html  report-f493c1.html  report-fd4917.html
2022-11-06-103248-5522-cppcheck@50028400eb50_master/: 23.html  34.html  44.html  50.html  56.html  61.html  7.html  output_50028400eb502a3b8bbb3ebb5f0b6c75be42cfda
2022-11-06-121852-51937-1@94f69da88ca8_master/: index.html  output_94f69da88ca89bb47cd43e183f0b5e4a6c515c75  report-1ab148.html  report-1eba91.html  report-24d5ad.html  report-2eb93f.html  report-3546fc.html  report-35b499.html  report-3f6fe5.html  report-43e08d.html  report-45c58b.html  report-4ce9de.html  report-713bcf.html  report-736df5.html  report-78e988.html  report-8156ae.html  report-83a9aa.html  report-890f6c.html  report-9d1d93.html  report-a35bd4.html  report-a4b61c.html  report-a8e2a7.html  report-c0f9f2.html  report-cad275.html  report-dcd45f.html  report-e04d58.html  report-e48dad.html  report-e75242.html  report-f493c1.html  report-fd4917.html
2022-11-06-122519-5911-cppcheck@94f69da88ca8_master/: 19.html  29.html  31.html  64.html  68.html
2022-11-10-095509-52010-1@9c363f00e14d_testicon/: index.html  output_9c363f00e14d568deab08e5c17788eb98ee4038f  report-1ab148.html  report-1eba91.html  report-24d5ad.html  report-2eb93f.html  report-3546fc.html  report-35b499.html  report-3f6fe5.html  report-43e08d.html  report-45c58b.html  report-4ce9de.html  report-713bcf.html  report-736df5.html  report-78e988.html  report-8156ae.html  report-83a9aa.html  report-890f6c.html  report-9d1d93.html  report-a35bd4.html  report-a4b61c.html  report-a8e2a7.html  report-c0f9f2.html  report-cad275.html  report-dcd45f.html  report-e04d58.html  report-e48dad.html  report-e75242.html  report-f493c1.html  report-fd4917.html
2022-11-10-100140-2949-cppcheck@9c363f00e14d_testicon/: 17.html  22.html  27.html  3.html  41.html  47.html  53.html  58.html  commitmsg
2022-11-10-101644-52010-1@3064a4d9dd17_testicon/: index.html  report-1ab148.html  report-1eba91.html  report-24d5ad.html  report-2eb93f.html  report-3546fc.html  report-35b499.html  report-3f6fe5.html  report-43e08d.html  report-45c58b.html  report-4ce9de.html  report-713bcf.html  report-736df5.html  report-78e988.html  report-8156ae.html  report-83a9aa.html  report-890f6c.html  report-9d1d93.html  report-a35bd4.html  report-a4b61c.html  report-a8e2a7.html  report-c0f9f2.html  report-cad275.html  report-dcd45f.html  report-e04d58.html  report-e48dad.html  report-e75242.html  report-f493c1.html  report-fd4917.html
2022-11-10-102259-9855-cppcheck@3064a4d9dd17_testicon/: 0.html  10.html  11.html  15.html  26.html  30.html  38.html  42.html  43.html  5.html  54.html  57.html  index.html  output_3064a4d9dd17a1a381b513e8199cd6c2f3209842
2022-11-12-103738-52442-1@9a7a59a0990e_port_vnck/: index.html  report-1ab148.html  report-1eba91.html  report-24d5ad.html  report-2eb93f.html  report-3546fc.html  report-35b499.html  report-3f6fe5.html  report-43e08d.html  report-45c58b.html  report-4ce9de.html  report-713bcf.html  report-736df5.html  report-78e988.html  report-8156ae.html  report-83a9aa.html  report-890f6c.html  report-9d1d93.html  report-a35bd4.html  report-a4b61c.html  report-a8e2a7.html  report-c0f9f2.html  report-cad275.html  report-dcd45f.html  report-e04d58.html  report-e48dad.html  report-e75242.html  report-f493c1.html  (+1 more)
applets/vncklet/: Makefile.am  org.cafe.panel.Vncklet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.VnckletFactory.service.in  org.cafe.panel.applet.window-list-previews.gschema.xml.in  org.cafe.panel.applet.window-list.gschema.xml.in  org.cafe.panel.applet.workspace-switcher.gschema.xml.in  showdesktop.c  vncklet.c  vncklet.gresource.xml  vncklet.h  window-list.c  window-list.h  window-list.ui  window-menu.c  window-menu.h  workspace-switcher.c  workspace-switcher.h  workspace-switcher.ui
data/: Makefile.am  default.layout  fedora.layout  linuxmint.layout  mageia.layout  opensuse.layout  org.cafe.panel.menubar.gschema.xml.in  org.cafe.panel.toplevel.gschema.xml.in  org.mate.panel.gschema.xml.in  org.mate.panel.object.gschema.xml.in  ubuntu.layout
data/theme/: Makefile.am  cafe-panel.css  mate-panel.css
doc/reference/cafe-panel-applet/: Makefile.am  cafe-panel-applet-docs.sgml  cafe-panel-applet-sections.txt  cafe-panel-applet.types
icons/16x16/: Makefile.am
icons/32x32/: Makefile.am
icons/64x64/: Makefile.am
icons/scalable/: Makefile.am
libcafe-panel-applet/: Makefile.am  TODO  cafe-panel-applet-factory.c  cafe-panel-applet-factory.h  cafe-panel-applet-gsettings.c  cafe-panel-applet-gsettings.h  cafe-panel-applet.c  cafe-panel-applet.h  libcafepanelapplet-4.0-uninstalled.pc.in  libcafepanelapplet-4.0.pc.in  org.cafe.panel.TestApplet.cafe-panel-applet.desktop.in  panel-applet-private.h  panel-plug-private.h  panel-plug.c  test-dbus-applet.c
mate-panel/libmate-panel-applet-private/: Makefile.am  panel-applet-container.c  panel-applet-container.h  panel-applet-frame-dbus.c  panel-applet-frame-dbus.h  panel-applet-mini.c  panel-applets-manager-dbus.c  panel-applets-manager-dbus.h
(+4335 files in other folders)
